--- a/Geometry 1/macros.tex
+++ b/Geometry 1/macros.tex
@@ -43,3 +43,4 @@
 \newcommand{\disjointunion}{\mathbin{\dot{\cup}}}
 \newcommand{\diam}[1]{\text{diam}\, #1}
 \newcommand{\at}{\Big|}
+\newcommand{\Sec}{\text{\Romannum{2}}}
