--- a/Geometry 1/preamble.tex
+++ b/Geometry 1/preamble.tex
@@ -8,7 +8,8 @@
 \usepackage{tikz}
 \usepackage{mathrsfs}
 \usepackage{mdframed}
-
+\usepackage{romannum}
+\AtBeginDocument{\pagenumbering{arabic}}
 % Create a new toggle
 \newtoggle{firstsection}
 
